fix(work-388): improve SbSelect inner tags to fit when text is too big

--- a/src/components/Select/select.scss
+++ b/src/components/Select/select.scss
@@ -109,6 +109,7 @@
   }
 
   .sb-tag {
+    overflow: hidden;
     margin: 4px;
 
     .sb-avatar,
@@ -141,6 +142,7 @@
     display: flex;
     flex: 1;
     flex-wrap: wrap;
+    overflow: auto;
     margin: -4px 0 -4px -4px;
   }
 
@@ -178,17 +180,20 @@
   }
 
   &__value {
-    position: absolute;
     overflow: hidden;
     box-sizing: border-box;
-    max-width: calc(100% - 60px);
     line-height: normal;
     text-overflow: ellipsis;
     white-space: nowrap;
 
     &-icon-left {
       max-width: calc(100% - 80px);
-      margin-left: 35px;
+    }
+
+    &-filterable {
+      position: absolute;
+      max-width: 100%;
+      padding-right: 50px;
     }
   }
 
@@ -287,6 +292,11 @@
   &__create {
     min-height: 17px;
     color: $sb-dark-blue;
+  }
+
+  &__item-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__create-label {
